test/TestSuite/Syntax/Errors/sorting_wbs.tjp
project test "Test" "1.0" 2007-11-07 +2m 

task t "T" {
  start ${projectstart}
}

taskreport report "report.html" {
# MARK: error 9 sorting_wbs
	sorttasks plan.wbs.up
}

